Complete Salesforce Development landing page

--- a/salesforce-development.html
+++ b/salesforce-development.html
@@ -1,6 +1,7 @@
 ---
 layout: landing
 title: Salesforce Development
+description: We're a small, remote team of Salesforce Developers based on the East Coast looking for projects where we can make a significant impact.
 permalink: /salesforce-development
 keywords: salesforce development, salesforce implementation partner, salesforce developer, salesforce developer for hire, hire remote salesforce developer, hire salesforce programmer, hire dedicated salesforce developer
 ---
@@ -29,7 +30,7 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
     <div class="col-lg-6 col-xl-5 offset-xl-1 pt-3 pt-sm-4 pt-lg-3">
         <div class="row pb-4 mb-1 mb-md-2 mb-xl-3">
             <div class="col-lg-10">
-                <p class="fs-xl">We're a Salesforce Implementation Partner and a small, local team of dedicated Salesforce Developers looking for impactful and meaninful projects. We implement from scratch and build into and fix existing systems.</p>
+                <p class="fs-xl">We're a Salesforce Implementation Partner and a small team of dedicated Salesforce Developers looking for projects where we can make a significant impact.</p>
             </div>
             <div class="col-lg-2">
                 <img class="mt-1" src="assets/img/salesforce-partner-square-solid.png" width="75" alt="Graph">
@@ -42,7 +43,7 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
 </section>
 
 <!-- What we offer -->
-<section class="overflow-hidden pt-md-2 pt-lg-3 pb-3 pb-md-4 pb-xl-5">
+<section class="overflow-hidden pt-md-2 pt-lg-3">
     <div class="container">
         <div class="d-flex flex-column flex-md-row flex-md-nowrap align-items-start">
         <div class="col-md-7 ps-0 pe-lg-4 mb-5 mb-md-0">
@@ -52,22 +53,22 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
                 <div class="col pt-1 pt-sm-2 pt-lg-3">
                     <i class="bx bx-rocket d-block fs-2 text-primary mb-2 mb-sm-3"></i>
                     <h3 class="h5 pb-sm-1 mb-2">Scalable Solutions</h3>
-                    <p class="mb-0">We design and implement for now and the future so your current investments last a long time.</p>
+                    <p class="mb-0">Our implementations are meant to meet your needs now and in the future, as your data and team scale up. Our speciality is growth-stage companies looking to rely on Salesforce for speed and trust.</strong></p>
                 </div>
                 <div class="col pt-1 pt-sm-2 pt-lg-3">
                     <i class="bx bx-like d-block fs-2 text-primary mb-2 mb-sm-3"></i>
-                    <h3 class="h5 pb-sm-1 mb-2">Success &amp; Approval</h3>
-                    <p class="mb-0">We validate our deployments in sandboxes both internally and with your company's stakeholders to make sure our implementations meet expectations.</p>
+                    <h3 class="h5 pb-sm-1 mb-2">Ongoing Success</h3>
+                    <p class="mb-0">We work in developer environments and sandboxes, and bring your primary stakeholders into our process to validate systems before deployment. This ensures smooth and consistent deployments.</p>
                 </div>
                 <div class="col pt-1 pt-sm-2 pt-lg-3">
                     <i class="bx bx-group d-block fs-2 text-primary mb-2 mb-sm-3"></i>
                     <h3 class="h5 pb-sm-1 mb-2">Small &amp; Dedicated Team</h3>
-                    <p class="mb-0">We're a team of 3 developers, all graduates of the University of North Carolina.</p>
+                    <p class="mb-0">We're a small team based on the East Coast (with Jon living abroad in Spain) and are all graduates of the University of North Carolina. We work remotely but are happy to swing by and say hey.</p>
                 </div>
                 <div class="col pt-1 pt-sm-2 pt-lg-3">
                     <i class="bx bx-time-five d-block fs-2 text-primary mb-2 mb-sm-3"></i>
-                    <h3 class="h5 pb-sm-1 mb-2">On Time &amp; Budget</h3>
-                    <p class="mb-0">Upfront, we estimate what features will roughly cost and the timeline to implement. We stay on track and make sure scope doesn't creep unless approved by your team.</p>
+                    <h3 class="h5 pb-sm-1 mb-2">On Time &amp; On Budget</h3>
+                    <p class="mb-0">Upfront estimates and timelines will help you plan budgets and releases, and we make it our mission to stay on track and within budget.</p>
                 </div>
             </div>
             </div>
@@ -79,7 +80,7 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
 
 <!-- Who we are -->
 <section class="container pb2">
-    <h2 class="text-center pb-md-2">Who we are</h2>
+    <h2 class="text-center h1 pb-3 mb-2 mb-md-3">Who We Are</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-3">
 
     <!-- Item -->
@@ -88,9 +89,8 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
         <div class="position-relative">
           <img src="assets/img/jon-profile.jpg" class="rounded-3" alt="Jon Duelfer">
           <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center rounded-3">
-            <span class="position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-25 rounded-3"></span>
             <div class="position-relative d-flex zindex-2">
-              <a href="https://www.linkedin.com/in/jonathan-duelfer-53749bba/" target="_blank" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
+              <a href="https://www.linkedin.com/in/jon-duelfer-53749bba/" target="_blank" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
                 <i class="bx bxl-linkedin"></i>
               </a>
             </div>
@@ -241,8 +241,8 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
               <div class="step-number-inner">1</div>
             </div>
             <div class="step-body">
-              <h3 class="h4 mb-3">Collecting information to identify problem</h3>
-              <p class="mb-0">Massa enim libero dictumst consectetur in convallis lobortis cursus mi a magna ullamcorper consectetur commodo fermentum.</p>
+              <h3 class="h4 mb-3">Discovery</h3>
+              <p class="mb-0">We meet with your primary stakeholders and users and try to understand your business and process inside and out.</p>
             </div>
           </div>
           <div class="step">
@@ -250,8 +250,8 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
               <div class="step-number-inner">2</div>
             </div>
             <div class="step-body">
-              <h3 class="h4 mb-3">Conducting a user research</h3>
-              <p class="mb-0">At ultricies id non quisque integer eget velit. Facilisis enim malesuada metus, risus amet ultricies magna aliquam bibendum convallis.</p>
+              <h3 class="h4 mb-3">Scoping</h3>
+              <p class="mb-0">We design Salesforce-centric solution that adapts to your business. This could involve 100% Salesforce-native tools, third-party integrations, or even custom application development as needs require.</p>
             </div>
           </div>
           <div class="step">
@@ -259,8 +259,8 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
               <div class="step-number-inner">3</div>
             </div>
             <div class="step-body">
-              <h3 class="h4 mb-3">Creating low-fidelity prototypes</h3>
-              <p class="mb-0">Pellentesque rhoncus viverra vestibulum, purus purus quisque quisque vestibulum facilisis dictumst consequat enim libero.</p>
+              <h3 class="h4 mb-3">Implementation</h3>
+              <p class="mb-0">Upon system approval, we proceed to implement the solution. We work in sandboxes and bring your stakeholders and users in to the process for verification. We release in increments, allowing you to take advantage of features quickly and to provide early feedback.</p>
             </div>
           </div>
           <div class="step">
@@ -268,8 +268,8 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
               <div class="step-number-inner">4</div>
             </div>
             <div class="step-body">
-              <h3 class="h4 mb-3">Building product MVP version</h3>
-              <p class="mb-0">Quam dolor commodo fermentum bibendum dictumst. Risus pretium eget at viverra eget neque adipiscing lobortis cursus.</p>
+              <h3 class="h4 mb-3">Ongoing Support</h3>
+              <p class="mb-0">We're in it for the long-run. We stick around and make sure your system is running smoothly, either fielding requests or working with your team for continuous delivery.</p>
             </div>
           </div>
         </div>
@@ -286,8 +286,8 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
           </div>
           <div class="col-md-6">
             <div class="ps-xl-5 ms-md-2 ms-lg-4">
-              <h2 class="h1 mb-3 mb-sm-4">We personalize how we work to fit your project needs</h2>
-              <p class="mb-4 mb-lg-5">Massa enim libero dictumst consectetur in convallis lobortis cursus mi a magna ullamcorper consectetur purus quisque.</p>
+              <h2 class="h1 mb-3 mb-sm-4">Salesforce built for your organization</h2>
+              <p class="mb-4 mb-lg-5">Salesforce's strength is it's highly customizable, yet reliable and scalable, nature. Otherwise, we'd all be in Hubspot!</p>
               <a href="/contact" class="btn btn-lg btn-primary shadow-primary">Start your project</a>
             </div>
           </div>
@@ -301,7 +301,7 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
           <div class="col-md-6 order-md-1">
             <div class="pe-xl-5 me-md-2 me-lg-4">
               <h2 class="h1 mb-3 mb-sm-4">Great reviews from our happy clients</h2>
-              <p class="mb-3 mb-sm-4">We really care about delivering long-term success for our clients.</p>
+              <p class="mb-3 mb-sm-4">We're a Salesforce Consulting and Managed Services Partner since 2021 and have completed a number of projects across the Energy &amp; Utilities, Financial Services, and Non-profits sectors. Our team also has plenty of experience across a number of other industries.</p>
               <div class="d-flex flex-wrap text-nowrap mb-4">
                 <div class="me-4 pe-3">
                   <h5 class="h2 mb-1">8</h5>
@@ -324,7 +324,7 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
         <span class="position-absolute top-0 start-0 w-100 h-100" style="background-color: rgba(255, 255, 255, .05)"></span>
         <div class="container position-relative zindex-5 text-center my-xl-3 py-1 py-md-4 py-lg-5">
           <p class="lead text-light opacity-70 mb-3">Ready to get started?</p>
-          <h2 class="h1 text-light pb-3 pb-lg-0 mb-lg-5">Launch Your Project with Us</h2>
+          <h2 class="h1 text-light pb-3 pb-lg-0 mb-lg-5">Let's Implement Your Salesforce</h2>
           <a href="/contact" class="btn btn-primary shadow-primary btn-lg">Work with us</a>
         </div>
       </section>
